--- a/upload-server/cgi-bin/index.html
+++ b/upload-server/cgi-bin/index.html
@@ -18,13 +18,16 @@
     .message {
       text-align: center;
     }
+    a {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
   <div class="message">
     <h1>403 Forbidden</h1>
     <p>Directory listing is disabled.</p>
-    <p><a href="../index.html" style="color: #00ffff;">Return to home</a></p>
+    <p><a href="../index.html">Return to home</a></p>
   </div>
 </body>
 </html>
