break out image errros

--- a/upload-server/upload.html
+++ b/upload-server/upload.html
@@ -550,7 +550,7 @@
           }, 'image/png');
           
         } catch (error) {
-          showError(`Failed to process image: ${error.message}`);
+          showError(`Failed to process image error: ${error.message}`);
         }
       };
       img.onerror = () => {
