add "hints on how to make a great fiche image" to upload page

--- a/upload-server/upload.html
+++ b/upload-server/upload.html
@@ -55,6 +55,9 @@
         <p style="text-align: center; margin-top: 10px; font-size: 12px; color: #888;">
           Don't like the preview? Try selecting a different image!
         </p>
+        <p style="text-align: center; margin-top: 10px; font-size: 12px;">
+          <a href="https://pocketfiche.cwandt.com/pf-guide.html" target="_blank" rel="noopener">Hints on how to make a great fiche image</a>
+        </p>
       </div>
       
       <!-- Pre-assigned location map (only shown for claimed parcels) -->
