move link to upload help document to top on upload page

--- a/upload-server/upload.html
+++ b/upload-server/upload.html
@@ -35,8 +35,10 @@
     <!-- Upload form -->
     <div id="upload-form" class="hidden">
       <h2>Step 1: Select Your Image</h2>
-      <p style="font-size: 12px; color: #888;">Best to upload a 500x500 1-bit black-and-white image, but if you upload something else, we will try our best to convert it for you.</p>
-      
+      <p style="font-size: 12px; color: #888;">
+        Best to upload a 500x500 1-bit black-and-white image, but if you upload something else, we will try our best to convert it for you.<br>
+        <a href="https://pocketfiche.cwandt.com/pf-guide.html" target="_blank" rel="noopener">Hints on how to make a great fiche image</a>
+      </p>
       <!-- Drop zone -->
       <div id="drop-zone">
         <p style="font-size: 20px;">📁</p>
@@ -55,9 +57,7 @@
         <p style="text-align: center; margin-top: 10px; font-size: 12px; color: #888;">
           Don't like the preview? Try selecting a different image!
         </p>
-        <p style="text-align: center; margin-top: 10px; font-size: 12px;">
-          <a href="https://pocketfiche.cwandt.com/pf-guide.html" target="_blank" rel="noopener">Hints on how to make a great fiche image</a>
-        </p>
+
       </div>
       
       <!-- Pre-assigned location map (only shown for claimed parcels) -->
